--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Contact Form Validation | Built with HTML, CSS and JS</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="form-container">
+        <h2>Contact Us</h2>
+        <div id="error-message"></div>
+        <form id="my-form">
+          <div class="input-field">
+            <input type="text" name="name" id="name" placeholder="Your Name" />
+          </div>
+          <div class="input-field">
+            <input
+              type="text"
+              name="subject"
+              id="subject"
+              placeholder="Subject" />
+          </div>
+          <div class="input-field">
+            <input
+              type="text"
+              name="phone"
+              id="phone"
+              placeholder="Phone number" />
+          </div>
+          <div class="input-field">
+            <input type="text" name="email" id="email" placeholder="Email" />
+          </div>
+          <div class="input-field">
+            <textarea id="message" placeholder="Message"></textarea>
+          </div>
+          <div class="btn">
+            <input type="submit" />
+          </div>
+        </form>
+      </div>
+    </div>
+  </body>
   <script src="./app.js" type="module"></script>
 </html>
